# InterviewSpark

./: .env.example  .gitignore  .markdownlint.json  Code review results.md  DevPlan.md  ProductionDoc.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  todo.md  tsconfig.json  version.json  vite.config.ts
.qoder/rules/: sparkRules.md
data/: interview_spark.db
scripts/: sync-version.cjs
src/: App.vue  main.ts  version.ts  vue-virtual-scroller.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: interview_spark.db
src-tauri/nsis/: hooks.nsi
src-tauri/resources/: personas.json
src-tauri/src/: lib.rs
src-tauri/src/analysis/: analytics.rs  backup.rs  best_practices.rs  cache.rs  cache_manager.rs  content.rs  dashboard.rs  export.rs  industry.rs  mod.rs  profile.rs  recommendation.rs  report.rs  scoring.rs  trends.rs
src-tauri/src/api/: dedup.rs  mod.rs  retry.rs  siliconflow.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/rag/: bootstrap.rs  embedding.rs  import.rs  mod.rs  retriever.rs  service.rs  vectordb.rs
src-tauri/src/rig_adapter/: mod.rs  provider.rs  scheduler.rs  state_machine.rs  vector_store.rs
src-tauri/src/rig_adapter/agents/: business.rs  comparison.rs  hr.rs  mod.rs  tech.rs
src/components/: ActivityHeatmap.vue  ActivityView.vue  AnswerComparison.vue  BestPracticesList.vue  CompletionAnimation.vue  ConfettiSuccess.vue  ConversationHistory.vue  Dashboard.vue  DashboardCards.vue  FeedbackDisplay.vue  GrowthView.vue  (+33 more)
(+17 files in other folders)
